clusters/common/apps/istio-system/app/tailscale-eastwest-egress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-istio-eastwestgateway
  namespace: istio-system
spec:
  externalName: robbinsdale-istio-eastwestgateway.keiretsu.ts.net
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-istio-eastwestgateway
  namespace: istio-system
spec:
  externalName: ottawa-istio-eastwestgateway.keiretsu.ts.net
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stpetersburg-istio-eastwestgateway
  namespace: istio-system
spec:
  externalName: stpetersburg-istio-eastwestgateway.keiretsu.ts.net
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
